--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,11 @@ body {
   color: #4F4B49;
   font-weight: 600;
 }
+.modal-footer {
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
+}
 .carousel__marcas {
   width: 90%;
   display: -ms-grid;
@@ -154,6 +159,84 @@ body {
 .index .carousel-inner .carousel-item {
   position: relative !important;
   display: inline-block !important;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.65);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box .slideA_logo {
+  margin: 15px 50px;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.2rem;
+  text-align: center;
+  margin: 15px 50px;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box .slideA_logoTermiz {
+  width: 200px;
+  margin: 15px 50px;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box-cta {
+  color: #ffffff;
+  background-color: #831d22;
+  text-decoration: none;
+  font-size: 1.8rem;
+  text-align: center;
+  padding: 10px 30px;
+  border-radius: 10px;
+  margin: 15px 50px;
+}
+.index .carousel-inner .carousel-item .slideB__Content__box {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.9);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.index .carousel-inner .carousel-item .slideB__Content__box p {
+  font-family: 'Poppins', sans-serif;
+  font-size: 3.5rem;
+  text-align: center;
+  margin: 10px 50px;
+  line-height: 3.3rem;
+}
+.index .carousel-inner .carousel-item .slideB__Content__box .slideA_logoCleaver {
+  width: 200px;
+  margin: 10px 50px;
 }
 .index .carousel-inner .carousel-item .slide1__Content {
   display: -webkit-box;
@@ -928,8 +1011,13 @@ body {
 }
 .servicios__catalogo__items-item .modal-content-body-content ul li p {
   text-align: left;
-  font-size: 1.8rem;
+  font-size: 2rem;
   margin: 5px;
+}
+.servicios__catalogo__items-item .modal-content-footer {
+  -webkit-box-pack: center !important;
+      -ms-flex-pack: center !important;
+          justify-content: center !important;
 }
 .productos__brindar p {
   font-size: 2rem;
