--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,22 +3,27 @@ block content
     .index
         section(data-bs-ride="carousel").content__slides.carousel.slide.carousel-fade#carouselExampleFade
             .carousel-inner
+                //- 
                 .carousel-item.active
-                    picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/indexDesktop1-1920x1035-.jpg")
-                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide1-834X565.jpg")
-                        img(src="images/slidesMobile/slide2-480x565.jpg").d-block.w-100
-                .carousel-item 
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
                         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
                         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
-                    .slide1__Content
-                        .slide1__Content__box
-                            p.slide1__Content__box-line1 30 años
-                            p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
-                            a(href="empresa.html").slide1__Content__box-line3 Conózcanos    
-                            
+                    .slideA__Content 
+                        .slideA__Content__box
+                            img(src="images/SVG/logoSertec.svg").img-fluid.slideA_logo
+                            p DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR
+                            img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
+                            a(href="contacto.html").slideA__Content__box-cta Contáctenos 
+                .carousel-item
+                    picture.carousel-item__img
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                    .slideB__Content 
+                        .slideB__Content__box
+                            p SOMOS ESPECIALISTAS EN CALDERAS
+                            img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoCleaver
                 .carousel-item
                         picture.carousel-item__img
                             source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
@@ -47,7 +52,21 @@ block content
                     .slide4__Content
                         .slide4__Content__box
                             p.slide4__Content__box-line1 VENTA DE#[br]#[strong CALDERAS] 
-                            a(href="calderas.html").slide4__Content__box-line2 Calderas             
+                            a(href="calderas.html").slide4__Content__box-line2 Calderas 
+                .carousel-item 
+                    picture.carousel-item__img
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                    .slide1__Content
+                        .slide1__Content__box
+                            p.slide1__Content__box-line1 30 años
+                            p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
+                            a(href="empresa.html").slide1__Content__box-line3 Conózcanos    
+                            
+                
+               
+                            
                 
             button(type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev").carousel-control-prev
                 span(aria-hidden="true").carousel-control-prev-icon
