--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,18 +3,17 @@ block content
     .index
         section(data-bs-ride="carousel").content__slides.carousel.slide.carousel-fade#carouselExampleFade
             .carousel-inner
-                //- 
+                
                 .carousel-item.active
                     picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide1Desktop-1920x537.jpg")
                         source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                        img(src="images/slidesMobile/slide2-480x565.jpg").d-block.w-100.img-fluid
                     .slideA__Content 
                         .slideA__Content__box
                             img(src="images/SVG/logoSertec.svg").img-fluid.slideA_logo
                             p DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR
                             img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoTermiz
-                            a(href="contacto.html").slideA__Content__box-cta Contáctenos 
                 .carousel-item
                     picture.carousel-item__img
                         source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
@@ -22,8 +21,9 @@ block content
                         img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slideB__Content 
                         .slideB__Content__box
-                            p SOMOS ESPECIALISTAS EN CALDERAS
-                            img(src="images/Marcas/logo_termiz_.png").img-fluid.slideA_logoCleaver
+                            p SOMOS #[strong ESPECIALISTAS EN CALDERAS]
+                            img(src="images/Marcas/Cleaver.png").img-fluid.slideB_logoCleaver
+                            a(href="contacto.html").slideB__Content__box-cta Contáctenos 
                 .carousel-item
                         picture.carousel-item__img
                             source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
@@ -62,12 +62,7 @@ block content
                         .slide1__Content__box
                             p.slide1__Content__box-line1 30 años
                             p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
-                            a(href="empresa.html").slide1__Content__box-line3 Conózcanos    
-                            
-                
-               
-                            
-                
+                            a(href="empresa.html").slide1__Content__box-line3 Conózcanos     
             button(type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev").carousel-control-prev
                 span(aria-hidden="true").carousel-control-prev-icon
                 span.visually-hidden Previous
@@ -80,8 +75,8 @@ block content
                 source(media="(min-width:768px)" srcset="images/PNG/fondoContactenos4.png")
                 img(src="images/PNG/fondoContactenos.png")
             p ¿Necesita asesoría especializada para su empresa?
-        .index__contactenos__btn
-            a(href="contacto.html") Contáctenos
+        //- .index__contactenos__btn
+        //-     a(href="contacto.html") Contáctenos
     p.title ACERCA DE NOSOTROS
     .index__area
         .index__area__acerca
