--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -11,7 +11,7 @@ block content
         p.title VENTA DE CALDERAS
         .calderas__venta 
             p Venta de calderas industriales de la marca:
-            img(src="images/Marcas/CLEAVERBROOKS.png", alt="Logo de CleaverBrooks")
+            img(src="images/Marcas/Cleaver.png", alt="Logo de CleaverBrooks")
         .calderas__carousel
             .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
                 .carousel-indicators 
