Se corrige visualización de logotipos de marcas

--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -4,13 +4,13 @@ p.title MARCAS
         .carousel-item.active
             img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/ASCO.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/ASCO.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/BELL-&-GOSSET.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100.img-fluid
         .carousel-item
             img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
         .carousel-item
@@ -37,10 +37,10 @@ p.title MARCAS
         .carousel-item.active
             img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
             img(src="images/Marcas/ASCO.png").d-block.w-100.img-fluid
-            img(src="images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/BELL-&-GOSSET.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
-            img(src="images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100.img-fluid
             img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
         .carousel-item
             img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
