--- a/css/style.less
+++ b/css/style.less
@@ -129,7 +129,7 @@
               font-weight: @font-extralight;
               font-size: 3.5rem;
               text-align: center;
-              margin: 0px 50px;
+              margin: 95px 50px 0px 50px;
               line-height: 4rem;
               strong{
                 font-weight: @font-bold;
@@ -368,7 +368,8 @@
          align-items: center;
 
          img{
-           max-height: 90px;
+           max-height: 59px;
+           width: 340px;
          }
          p{   
           position: absolute;
