--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -106,8 +106,8 @@ block content
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
                                 .modal-content-header
-                                    
                                     p.modal-title#exampleModalLabel DISEÑO DE CUARTO DE MAQUINAS
+                                    button(type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close")
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         p CUARTO DE MAQUINAS
