--- a/css/style.less
+++ b/css/style.less
@@ -226,19 +226,7 @@
                 align-items: center;
                 justify-content: center;
                 border-radius: 10px;
-                width: ;
-
               }          
-              &-line1{
-                
-                
-              }
-              &-line2{
-             
-              }
-              &-line3{
-
-              }
               &-line4{
                 background-color: @color-secondary;
                 color: @color-white;
@@ -352,45 +340,20 @@
      }
      &__contactenos{
       position: relative;
-      display: flex;
-      max-height: 85px;
-      font-size: 1.8rem;
-      margin-top: 10px;
-      gap: 5px;
-      align-items: center;
-      justify-content: center;
-       &__txt{
-         width: 100%;
-         height: 100%;
-         color: @color-white;
-         display: flex;
-         justify-content: flex-start;
-         align-items: center;
-
-         img{
-           max-height: 59px;
-           width: 340px;
-         }
+      margin: 20px 20px 20px 0px;
+      overflow: hidden;
          p{   
           position: absolute;
-          padding: 5px 10px;
-          line-height: 2rem;
-          font-size: 1.6rem;
-          margin-bottom: 0 !important;
-          width: 75%;
+          display: flex;
+          color: @color-white;
+          justify-content: center;
+          align-items: center;
+          font-size: 1.8rem;
+          width: auto;
+          top: 0;
+          margin: 0px 10px 0px 5px;
+          text-align: center;
          }
-       }
-       &__btn{
-        background-color: @color-secondary;
-        width: 40%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-         a{
-            text-decoration: none;
-            color: @color-white;
-         }
-       }
      }
      &__area{
       &__acerca{
