--- a/css/style.less
+++ b/css/style.less
@@ -111,6 +111,7 @@
 
           }
         }
+
         .slideB__Content{
           &__box{
             position: absolute;
@@ -129,7 +130,7 @@
               font-weight: @font-extralight;
               font-size: 3.5rem;
               text-align: center;
-              margin: 95px 50px 0px 50px;
+              margin: 0px 50px;
               line-height: 4rem;
               strong{
                 font-weight: @font-bold;
@@ -149,7 +150,7 @@
               padding: 10px 30px;
               border-radius: 10px;
               position: absolute;
-              bottom: 12px;
+              bottom: 32px;
               width: 180px;
               text-align: center;
             }
@@ -164,7 +165,7 @@
          align-items: center;
           &__box{
             position: absolute;
-            top: -4px;
+            top: 14px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -178,6 +179,8 @@
               font-family: @font-family2;
               border-bottom: 2px solid @color-white;
               padding: 0;
+              line-height: 8rem;
+              // margin-bottom: 0 !important;
             }
             &-line2{
               font-size: 3rem;
