Se corrige raya en caja de calderas, se agregan las imagenes de marcas

--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -6,8 +6,6 @@ p.title MARCAS
         .carousel-item
             img(src="images/Marcas/ASCO.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/BELL-&-GOSSET.jpg").d-block.w-100.img-fluid
-        .carousel-item
             img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100.img-fluid
         .carousel-item
             img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100.img-fluid
@@ -24,7 +22,7 @@ p.title MARCAS
         .carousel-item
             img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100.img-fluid
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
@@ -49,7 +47,7 @@ p.title MARCAS
         .carousel-item
             img(src="images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
             img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
-            img(src="images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100.img-fluid
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
