--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -14,10 +14,18 @@ block content
         .servicios__carousel
             .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
                 .carousel-indicators 
+                    //- button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1").active
+                    //-     img(src="images/FotosServicios/1.jpg").d-block.w-100.img-fluid
+                    //- button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
+                    //-     img(src="images/FotosServicios/2.jpg").d-block.w-100.img-fluid
+                    //- button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
+                    //-     img(src="images/FotosServicios/3.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-label="Slide 1").active
                         img(src="images/FotosServicios/1.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2")
                         img(src="images/FotosServicios/2.jpg").d-block.w-100.img-fluid
+                    //- button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6")
+                    //-     img(src="images/FotosServicios/6.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3")
                         img(src="images/FotosServicios/3.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4")
@@ -32,14 +40,6 @@ block content
                         img(src="images/FotosServicios/8.jpg").d-block.w-100.img-fluid
                     button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9")
                         img(src="images/FotosServicios/9.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10")
-                        img(src="images/FotosServicios/10.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11")
-                        img(src="images/FotosServicios/11.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12")
-                        img(src="images/FotosServicios/12.jpg").d-block.w-100.img-fluid
-                    button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13")
-                        img(src="images/FotosServicios/13.jpg").d-block.w-100.img-fluid
                 .carousel-inner 
                     .carousel-item.active
                         img(src="images/FotosServicios/1.jpg").d-block.w-100
@@ -59,14 +59,6 @@ block content
                         img(src="images/FotosServicios/8.jpg").d-block.w-100
                     .carousel-item 
                         img(src="images/FotosServicios/9.jpg").d-block.w-100
-                    .carousel-item 
-                        img(src="images/FotosServicios/10.jpg").d-block.w-100
-                    .carousel-item 
-                        img(src="images/FotosServicios/11.jpg").d-block.w-100
-                    .carousel-item 
-                        img(src="images/FotosServicios/12.jpg").d-block.w-100
-                    .carousel-item 
-                        img(src="images/FotosServicios/13.jpg").d-block.w-100
                 button(type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev").carousel-control-prev
                     span(aria-hidden="true").carousel-control-prev-icon
                     span.visually-hidden Previous
