--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,9 @@ body {
   right: 20px;
   z-index: 1;
 }
+.carousel-indicators {
+  margin-bottom: 1.5rem !important;
+}
 .carousel-control-next,
 .carousel-control-prev {
   opacity: 1 !important;
@@ -798,10 +801,21 @@ body {
 }
 .empresa__content-historia {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.empresa__content-historia picture {
+  height: auto;
 }
 .empresa__content-historia p {
   position: absolute;
-  top: 0;
   color: #ffffff;
   padding: 30px;
   text-align: justify;
