--- a/css/style.css
+++ b/css/style.css
@@ -1050,15 +1050,15 @@ body {
   border: 2px solid #000000;
   border-radius: 10px;
   margin: 20px;
-  height: 400px;
+  max-height: 395px;
   display: -ms-grid;
   display: grid;
-  overflow: hidden;
 }
 .productos__catalogo .accordion .accordion-body__box-img {
-  margin: 20px;
+  margin: 15px 20px;
 }
 .productos__catalogo .accordion .accordion-body__box-txt {
+  border: 4px solid #000000;
   background-color: #000000;
   color: #ffffff;
   text-align: center;
@@ -1074,7 +1074,10 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   height: 80px;
-  border-radius: 0 0 5px 5px;
+  border-radius: 0 0 10px 10px;
+}
+.productos__catalogo .accordion .accordion-body__box-txt p {
+  margin-bottom: 0;
 }
 .calderas__venta {
   margin: 40px 10px;
