--- a/css/style.less
+++ b/css/style.less
@@ -700,6 +700,15 @@
           }
           .modal{
             &-content{
+              &-close{
+                button{
+                  position: absolute;
+                  font-size: 2rem;
+                  margin: 0;
+                  right: 5px;
+                  width: auto;
+                }
+              }
               &-header{
                 display: flex;
                 align-items: flex-start;
