--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -97,12 +97,12 @@ block content
                     .modal.fade(tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true")#maquinasModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
+                                //- .modal-content-close
+                                //-     button(type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close")
                                 .modal-content-header
-                                    p.modal-title#exampleModalLabel DISEÑO DE CUARTO DE MAQUINAS
-                                    button(type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close")
+                                    p.modal-title#exampleModalLabel CUARTO DE MAQUINAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p CUARTO DE MAQUINAS
                                         .modal-content-body-sidebar__images 
                                             img(src="images/Single/DisenoCuartodeMaquinas.jpg", alt="").img-fluid
                                     .modal-content-body-content
@@ -120,10 +120,9 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES
+                                    p.modal-title#exampleModalLabel INSTALACIÓN DE COLECTOR DE HOLLÍN
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p INSTALACIÓN DE COLECTOR DE HOLLÍN
                                         .modal-content-body-sidebar__images 
                                             img(src="images/Single/hollin.jpg", alt="Hollin").img-fluid
                                             img(src="images/Single/instalacionCalderasEquiposAux.jpg", alt="Hollin").img-fluid
@@ -151,11 +150,9 @@ block content
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
                                 .modal-content-header
-                                    
-                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS
+                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p MANTENIMIENTO PREVENTIVO
                                         .modal-content-body-sidebar__images
                                             h3 ANTES
                                             img(src="images/Single/mantenimientoPrevCorr1.jpg").img-fluid
@@ -204,10 +201,9 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CONVERSIÓN DE COMBUSTIBLES A CALDERAS
+                                    p.modal-title#exampleModalLabel CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p CONVERSIÓN DE COMBUSTÓLEO A GAS NATURAL
                                         .modal-content-body-sidebar__images
                                             h3 ANTES
                                             img(src="images/Single/conversionCombustibles1.jpg", alt="Caldera").img-fluid
@@ -237,10 +233,10 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES
+                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p MANTENIMIENTO PREVENTIVO
+                                    
                                         .modal-content-body-sidebar__images
                                             h3 ANTES
                                             img(src="images/Single/quemadores1.jpg", alt="").img-fluid
@@ -264,10 +260,10 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CARBURACIONES CON EQUIPO ANALIZADOR TESTO
+                                    p.modal-title#exampleModalLabel CARBURACIÓN
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p CARBURACIÓN
+                                        
                                         .modal-content-body-sidebar__images 
                                             img(src="images/Single/testo1.jpg").img-fluid
                                             img(src="images/Single/testo2.jpg").img-fluid
@@ -285,10 +281,10 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CURSO BÁSICO DE OPERACIÓN A CALDERAS
+                                    p.modal-title#exampleModalLabel CURSO DE CALDERAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p CURSO DE CALDERAS
+                                   
                                         .modal-content-body-sidebar__images 
                                             img(src="images/Single/curso.jpg").img-fluid
                                     .modal-content-body-content
@@ -306,10 +302,10 @@ block content
                             .modal-content
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel SERVICIOS ADICIONALES
+                                    p.modal-title#exampleModalLabel EMERGENCIAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
-                                        p EMERGENCIAS
+                                        
                                         .modal-content-body-sidebar__images 
                                             img(src="images/Single/emergencias.jpg").img-fluid
                                     .modal-content-body-content
